# tripod-lambda

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tripod.py  tripod_lambda.py
